syntax = "proto3";

package note_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "chat/pkg/note_v1;note_v1";

message CreateChatRequest {
  repeated string usermanes = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message DeleteChatResponse {
  google.protobuf.Empty empty = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageResponse {
  google.protobuf.Empty empty = 1;
}

service ChatAPI {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}